--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="footer_text ">
 
             <div class="address ">
-                <img src="images/icon-location.svg" alt="">
+                <img class="pall" src="images/icon-location.svg" alt="">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
 dolore magna aliqua
@@ -209,36 +209,39 @@ dolore magna aliqua
 
             </div>
 
-            <div class="contact pall">
-                <a href="#">
+            <div class="contact ">
+                <a class="pall" href="#">
                     <img src="images/icon-phone.svg" alt="phone">
                     <h3>+1-543-123-4567</h3>
                 </a>
 
-                <a href="#">
+                <a class="pall" href="#">
                     <img src="images/icon-email.svg" alt="gmail">
-                    <h3>example@fylo.com</h3>
+                    <h3 >example@fylo.com</h3>
                 </a>
 
             </div>
 
-            <div class="resource pall">
+            <div class="resource ">
 
-                <a href="#">About Us </a>
-                <a href="#">Jobs </a>
-                <a href="#">Press </a>
-                <a href="#">Blog </a>
+                <a class="pall" href="#">About Us </a>
+                <a class="pall" href="#">Jobs </a>
+                <a class="pall" href="#">Press </a>
+                <a class="pall" href="#">Blog </a>
             </div>
 
-            <div class="cta pall">
+            <div class="cta">
 
-                <a href="#">Contact Us</a>
-                <a href="#">Terms</a>
-                <a href="#">Privacy</a>
+                <a class="pall" href="#">Contact Us</a>
+                <a class="pall" href="#">Terms</a>
+                <a class="pall" href="#">Privacy</a>
             </div>
 
-            <div class="socials pall">
-                <img src="images/" alt="">
+            <div class="socials ">
+                <img class="pall" src="images/twitter.png" alt="">
+                <img class="pall" src="images/instagram.png" alt="">
+                <img class="pall" src="images/facebook.png" alt="">
+
             </div>
 
         </div>
