--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
         <section class="header">
             <div class="header-img">
-                <img src="images/illustration-intro.png" alt="">
+                <img src="images/illustration-mockups.svg" alt="">
             </div>
     
             <h1>
@@ -186,7 +186,7 @@
 
            <div class="button ">
                  <input type="email" name="email" type="required" placeholder="example@tjcode.com" id="">
-                <a href="#" class="get-start">Get Started for Free</a>
+                <a href="#" class="get-start">Get Started</a>
  
            </div>
         </div>
@@ -194,6 +194,7 @@
 
 
     <footer class="bottom_section">
+
         <div class="img_logo">
             <img src="images/logo.svg" alt="">
         </div>
