--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
                 <img src="images/illustration-mockups.svg" alt="">
             </div>
     
-            <h1>
-                All your files in one secure location, accessible anywhere.</h1>
-            <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.
-            </p>
+            <div class="head_text">
+                <h1>
+                    All your files in one secure location, accessible anywhere.</h1>
+                <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.
+                </p>
+            </div>
             <a href="#" class="btn ">Get Started</a>
         </section>
     
